# cpg_generator_export

./: .gitignore  .traerules  PROJECT_RULES.md  README.md  c2cpg.sh  generate_cpgs.sh  liblib.rlib  libmain.rlib
.trae/documents/: plan_20260225_032234.md
Data/: README.md
c_tools/: convert_graphml_to_json.py
docs/: CLAMS_INTEGRATION.md  COMPONENT_VULN_DATABASE_BUILD_GUIDE.md  CONFLICT_RECONCILIATION_2026_03_29.md  CVE_2024_28757_CHAIN_POC.md  DEPLOY_TO_LINUX.md  EXPAT_SUPPLYCHAIN_DETECTION.md  INTERPROC_ALIAS_INTEGRATION.md  NATIVE_AUTO_SOURCE_SUPPLEMENT_DESIGN.md  NATIVE_TO_NATIVE_STRICT_RESOLUTION_PLAN.md  PLAN_APRON_CONSTRAINT_INTEGRATION.md  POC_TTSG_CONSTRAINT_EXPLANATION.md  PROJECT_STRUCTURE.md  PROJECT_TECHNICAL_OVERVIEW.md  RUSTY_BASELINE_CAPABILITY_AND_EVALUATION_2026-04-26.md  Rust_CPG_格式说明.md  SUPPLYCHAIN_TOOL_REPORT.md  TECH_DESIGN_APRON_SMT.md  TECH_DESIGN_EVIDENCE_FFI.md  TECH_DESIGN_TTSG_CONSTRAINT.md  TOP15_BENCHMARK_2026-04-21.md  TOP15_FAILURE_ANALYSIS_2026-04-21.md  TOP15_FAILURE_ANALYSIS_2026-04-25.md  TOP15_FINAL_REPORT_2026-04-27.md  mermaid_preview.html  寻找可用漏洞项目的Agent任务模板.md  顶会投稿分析与后续计划.md
rust_src/: Cargo.toml  build.rs
rust_src/src/: lib.rs  main.rs
rust_src/src/analysis/: hir.rs  hir_legacy.rs  mir.rs  mir_legacy.rs  mod.rs
rust_src/src/cpg/: nodes.rs
skills/ANALYSIS/: SKILL.md
skills/agent-handoff-prompter/: SKILL.md
skills/codex_promot/: SKILL.md
skills/find-proj/: SKILL.md
tools/common/: path_defaults.py
tools/deploy/: bootstrap_linux.sh  package_for_linux.py  run_analysis_bundle.sh
vulnerabilities/: 漏洞汇总.md
(+265 files in other folders)
