[package]
name = "rust-cpg-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
walkdir = "2.3"
log = "0.4"
env_logger = "0.10"
# rustc libraries are provided by the toolchain when using rustup component add rustc-dev
